# src/main/resources/public/swagger/swagger.yaml
@@ -17,6 +17,10 @@ tags:
     description: |
       Serviços de criação e pesquisa de turma. <br/>
       **Apenas usuários com perfil `ADMIN`.**
+  - name: atividade
+    description: |
+      Serviços de criação e pesquisa de atividade. <br/>
+      **Apenas usuários com perfil `ADMIN`.**
 paths:
   /actuator/health:
     get:
@@ -221,6 +225,75 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/TurmaPageResponse'
+        '400':
+          description: Bad request. Falha na validação dos dados de entrada ou violação de regras de negócio.
+        '401':
+          description: Unauthorized. Retornado quando a requisição não envia as credenciais necessárias para identificação e autorização.
+        '403':
+          description: Forbidden. As credenciais fornecidas são insuficientes para realizar esta operação.
+        '500':
+          description: Erro interno
+  /atividades:
+    post:
+      tags:
+        - atividade
+      summary: Cria uma atividade
+      description: Cria uma atividade a partir do nome, descricao e valor por dia.
+      security:
+        - bearerAuthToken: [ ]
+      requestBody:
+        description: Corpo da requisição de criação de atividade
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateAtividadeRequest'
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AtividadeResponse'
+        '400':
+          description: Bad request. Falha na validação dos dados de entrada ou violação de regras de negócio.
+        '401':
+          description: Unauthorized. Retornado quando a requisição não envia as credenciais necessárias para identificação e autorização.
+        '403':
+          description: Forbidden. As credenciais fornecidas são insuficientes para realizar esta operação.
+        '500':
+          description: Erro interno
+    get:
+      tags:
+        - atividade
+      summary: Obtém todas as atividades
+      security:
+        - bearerAuthToken: [ ]
+      parameters:
+        - name: page
+          in: query
+          description: |
+            Número de página solicitado. <br/>
+            **Atenção: os números de página inciam em `0`.**
+          required: false
+          schema:
+            type: integer
+            example: 0
+            default: 0
+        - name: size
+          in: query
+          description: Tamanho máximo da página de dados retornada.
+          required: false
+          schema:
+            type: integer
+            example: 20
+            default: 10
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AtividadePageResponse'
         '400':
           description: Bad request. Falha na validação dos dados de entrada ou violação de regras de negócio.
         '401':
@@ -435,6 +508,84 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/TurmaResponse'
+        pageable:
+          type: object
+        last:
+          type: boolean
+          example: false
+          description: Verifica se é a última página.
+        totalElements:
+          type: number
+          example: 5
+          description: Número de elementos totais.
+        totalPages:
+          type: number
+          example: 5
+          description: Número de páginas totais.
+        size:
+          type: number
+          example: 1
+          description: Número de elementos por página.
+        number:
+          type: number
+          example: 0
+          description: Número de da página.
+        sort:
+          $ref: '#/components/schemas/SortResponse'
+        first:
+          type: boolean
+          example: true
+          description: Verifica se é a primeira página.
+        numberOfElements:
+          type: number
+          example: 5
+          description: Número de elementos totais.
+        empty:
+          type: boolean
+          example: false
+          description: Verifica se a lista está vazia ou não.
+
+    CreateAtividadeRequest:
+      type: object
+      properties:
+        nome:
+          type: string
+          description: Nome da atividade
+          example: 'Boxe'
+        descricao:
+          type: string
+          description: Descricao da atividade
+          example: 'Muito bom para quem quer queimar gordura...'
+        valorDia:
+          type: number
+          description: Valor por dia da atividade
+          example: 50.99
+    AtividadeResponse:
+      type: object
+      properties:
+        id:
+          type: number
+          description: identificador único da atividade
+          example: 12
+        nome:
+          type: string
+          description: Nome da atividade
+          example: 'Boxe'
+        descricao:
+          type: string
+          description: Descricao da atividade
+          example: 'Muito bom para quem quer queimar gordura...'
+        valorDia:
+          type: number
+          description: Valor por dia da atividade
+          example: 50.99
+    AtividadePageResponse:
+      type: object
+      properties:
+        content:
+          type: array
+          items:
+            $ref: '#/components/schemas/AtividadeResponse'
         pageable:
           type: object
         last:
